@@ -114,6 +114,7 @@ CPTPieDirection;
     CGFloat pieRadius;
     CGFloat pieInnerRadius;
     CGFloat startAngle;
+    CGFloat endAngle;
     CPTPieDirection sliceDirection;
     CGPoint centerAnchor;
     CPTLineStyle *borderLineStyle;
@@ -123,6 +124,7 @@ CPTPieDirection;
 @property (nonatomic, readwrite) CGFloat pieRadius;
 @property (nonatomic, readwrite) CGFloat pieInnerRadius;
 @property (nonatomic, readwrite) CGFloat startAngle;
+@property (nonatomic, readwrite) CGFloat endAngle;
 @property (nonatomic, readwrite) CPTPieDirection sliceDirection;
 @property (nonatomic, readwrite) CGPoint centerAnchor;
 @property (nonatomic, readwrite, copy) CPTLineStyle *borderLineStyle;
