@@ -10,6 +10,7 @@
 - **New**: Added a plot data label selection delegate method.
 - **New**: Added a line fill property to `CPTLineStyle`.
 - **New**: Added point selection delegate methods to `CPTRangePlot` and `CPTTradingRangePlot`.
+- **New**: Added an end angle property to `CPTPieChart`.
 - **Changed**: Changed the superclass of `CPTTextLayer` from `CPTLayer` to `CPTBorderedLayer`.
 - **Changed**: Changed all iOS header files to "Project" visibility to prevent problems with archiving an app that uses the Core Plot static library.
 
